# mordorhike

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
dreamerv3/: agent.py  main.py
dreamerv3/embodied/envs/: dmc.py  dmlab.py  dummy.py  from_gym.py  from_gymnasium.py  loconav.py  minecraft_base.py  pinpad.py
dreamerv3/embodied/replay/: chunk.py  replay.py
dreamerv3/embodied/run/: eval_only.py  parallel.py
dreamerv3/embodied/tests/: test_replay.py
dreamerv3/embodied/tests/distr/: test_process.py  test_thread.py
notebooks/: analyze_rollouts.ipynb  results.ipynb
scripts/: 001_dreamer_tr_128.sh  002_dreamer_tr_512.sh  003_dreamer_ms_5m.sh  004_dreamer_ms_12m.sh  005_dreamer_ms_5m_tr_512.sh  006_dreamer_ms_12m_tr_512.sh  007_dreamer_tr_512_hard.sh  008_dreamer_tr_512_hard_noclip.sh  009_dreamer_particle_policy.sh  010_dreamer_very_hard.sh  011_dreamer_smol.sh  012_dreamer_smol_with_particle.sh  013_dreamer_very_hard_particle_policy.sh  014_r2i_default.sh  015_r2i_gru.sh  016_dreamer_default.sh  017_r2i_big.sh  017_r2i_large.sh  018_dreamer_default_particle.sh  019_dreamer_default_discount.sh  020_dreamer_particle_policy.sh  021_dreamer_hard_particle_policy.sh  022_dreamer_very_hard.sh  023_dreamer_very_hard_particle_policy.sh  024_dreamer_default_smol.sh  025_dreamer_pp_smol.sh  026_storm_easy.sh  027_dreamer_easy.sh  027_dreamer_m_high_tr.sh  028_r2i_easy.sh  028_storm_large.sh  029_drqn_easy.sh  030_r2i_easy_debug.sh  031_dreamer_easy_smol.sh  032_r2i_easy_high_ent.sh  033_dreamer_easy_30k.sh  034_r2i_easy_large.sh  035_storm_easy_learnt_positional.sh  036_storm_easy_1m_params.sh  037_dreamer_medium.sh  (+32 more)
src/powm/: analyze.py  utils.py
src/powm/algorithms/: dreamer_configs.yaml  drqn_configs.yaml  eval_dreamer.py  r2i_configs.yaml  rollout_dreamer.py  rollout_drqn.py  rollout_r2i.py  rollout_storm.py  storm_config.yaml  train_dreamer.py  train_drqn.py  train_r2i.py  train_storm.py  tune_dreamer.py  tune_drqn.py  tune_r2i.py
src/powm/algorithms/configs/: dreamer.yaml  drqn.yaml  r2i.yaml  storm.yaml
src/powm/envs/: __init__.py  mordor.jl  mordor.py  mordor_hike_jax.py  mordor_plan.py  wrappers.py
src/powm/mine/: deepset.py  mine.py
