[project]
name = "powm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dreamerv3",
    "gymnasium>=0.29",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "recall2imagine",
    "torch>=2.4.1",
    "wandb[media,video]>=0.18.3",
]

[tool.uv.sources]
dreamerv3 = { path = "third_party/dreamerv3", editable = true }
recall2imagine = { path = "third_party/recall2imagine", editable = true }

[project.scripts]
train-dreamer = "powm.algorithms.train_dreamer:main"
eval-dreamer = "powm.algorithms.eval_dreamer:main"
train-r2i = "powm.algorithms.train_r2i:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
