[project]
name = "powm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "dreamerv3",
    "gymnasium>=0.29",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "neural-pipeline-search>=0.12.2",
    "opencv-python>=4.10.0.84",
    "recall2imagine",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "storm-wm",
    "tensorboardx>=2.6.2.2",
    "tensorflow-probability[tf]>=0.24.0",
    "torch>=2.4.1",
    "wandb[media,video]>=0.18.3",
]

[tool.uv.sources]
dreamerv3 = { path = "third_party/dreamerv3", editable = true }
recall2imagine = { path = "third_party/recall2imagine", editable = true }
storm-wm = { path = "third_party/STORM", editable = true }
neural-pipeline-search = { git = "https://github.com/automl/neps.git" }

[project.scripts]
tune-drqn = "powm.algorithms.tune_drqn:main"
train-dreamer = "powm.algorithms.train_dreamer:main"
tune-dreamer = "powm.algorithms.tune_dreamer:main"
rollout-dreamer = "powm.algorithms.rollout_dreamer:main"
train-r2i = "powm.algorithms.train_r2i:main"
rollout-r2i = "powm.algorithms.rollout_r2i:main"
tune-r2i = "powm.algorithms.tune_r2i:main"
train-storm = "powm.algorithms.train_storm:main"
rollout-storm = "powm.algorithms.rollout_storm:main"
train-drqn = "powm.algorithms.train_drqn:main"
rollout-drqn = "powm.algorithms.rollout_drqn:main"
analyze = "powm.analyze:main"

[tool.uv]
cache-dir = "../.cache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
